applications/openlookeng-search/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: openlookeng-search
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openlookeng/search:v0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /opengauss/application.yaml
          name: configmap-volume
          subPath: application.yaml
      volumes:
      - name: configmap-volume
        secret:
          secretName: search-secrets
