applications/openlookeng-search/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: openlookeng-search
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: httpport
  selector:
    app: search
  type: ClusterIP
