applications/openlookeng-search/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: openlookeng-search-ingress
  namespace: openlookeng-search
spec:
  tls:
    - hosts:
        - search.openlookeng.io
      secretName: openlookeng-search-tls
  rules:
    - host: search.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: search-service
              servicePort: 80
            path: /
